--- a/final_configs/ce2.conf
+++ b/final_configs/ce2.conf
@@ -1,3 +1,4 @@
+
 version 15.1X53-D63.9;
 system {
     host-name ce2;
@@ -3784,6 +3785,11 @@ routing-instances {
         instance-type virtual-router;
         interface irb.100;
         interface irb.101;
+        routing-options {
+            static {
+                route 0.0.0.0/0 next-hop 150.100.1.254;
+            }
+        }
     }
 }
 vlans {
