--- a/final_configs/ce3.conf
+++ b/final_configs/ce3.conf
@@ -2,7 +2,7 @@
 
 {master:0}
 root@ce3> show configuration | no-more 
-## Last commit: 2018-07-09 13:42:08 UTC by root
+## Last commit: 2018-07-09 14:26:14 UTC by root
 version 15.1X53-D63.9;
 system {
     host-name ce3;
@@ -3774,10 +3774,6 @@ forwarding-options {
     }
 }
 routing-options {
-    static {
-        route 150.100.1.0/24 next-hop 150.250.1.1;
-        route 150.101.1.0/24 next-hop 150.250.1.1;
-    }
     router-id 1.1.1.5;
     autonomous-system 65505;
 }
@@ -3790,6 +3786,17 @@ protocols {
     }
     igmp-snooping {
         vlan default;
+    }
+}
+routing-instances {
+    TEST {
+        instance-type virtual-router;
+        interface irb.250;
+        routing-options {
+            static {
+                route 0.0.0.0/0 next-hop 150.250.1.254;
+            }
+        }
     }
 }
 vlans {
