--- a/final_configs/spine1.conf
+++ b/final_configs/spine1.conf
@@ -3807,6 +3807,7 @@ protocols {
             family evpn {
                 signaling;
             }
+            export CUSTOM-100;
             vpn-apply-export;
             cluster 1.1.1.11;
             local-as 64512;
@@ -3853,6 +3854,22 @@ protocols {
     }
 }
 policy-options {
+    policy-statement CUSTOM-100 {
+        term term1 {
+            from {
+                family evpn;
+                community COM-VNI-50100;
+                nlri-route-type 2;
+            }
+            then {
+                community add ADD-COMMUNITY-100;
+                accept;
+            }
+        }
+        term term100 {
+            then accept;
+        }
+    }
     policy-statement LB {
         term term1 {
             from protocol evpn;
@@ -3907,6 +3924,7 @@ policy-options {
             then reject;
         }
     }
+    community ADD-COMMUNITY-100 members 64512:50100;
     community COM-VNI-50100 members target:1:100;
     community COM-VNI-50101 members target:1:101;
     community MY-FAB-COMMUNITY members target:1:9999;
@@ -3967,4 +3985,3 @@ vlans {
         }
     }
 }
-
