--- a/final_configs/leaf1.conf
+++ b/final_configs/leaf1.conf
@@ -1,3 +1,5 @@
+
+## Last commit: 2018-07-11 12:34:22 UTC by root
 version 15.1X53-D63.9;
 system {
     host-name leaf1;
@@ -3750,13 +3752,6 @@ interfaces {
         unit 0 {
             family inet {
                 address 169.254.0.2/24;
-            }
-        }
-    }
-    irb {
-        unit 100 {
-            family inet {
-                address 10.136.1.10/24;
             }
         }
     }
