--- a/final_configs/leaf2.conf
+++ b/final_configs/leaf2.conf
@@ -1,3 +1,5 @@
+
+version 15.1X53-D63.9;
 system {
     host-name leaf2;
     root-authentication {
@@ -3749,13 +3751,6 @@ interfaces {
         unit 0 {
             family inet {
                 address 169.254.0.2/24;
-            }
-        }
-    }
-    irb {
-        unit 100 {
-            family inet {
-                address 10.136.1.10/24;
             }
         }
     }
